# Ai-researcher

./: .gitignore  LICENSE  README.md  agent.ipynb  agent.py  app.py  build_index.ipynb  constaints.py  constants.py  index_manager.py  index_manager_pinecone.py  pinecone.ipynb  pyproject.toml  requirements.txt  tools.py
storage/metadata/: papers.json
